--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -6,6 +6,6 @@
   <div class="list-group-item" id={{post.id}}>
     <h4 class="list-group-item-heading">{{post.title}}</h4>
     <p class="list-group-item-text">{{post.body}}</p>
-    <a target="_self" routerLink="../comments"> Comments>> </a>
+    <a target="_self" routerLink="../comments/{{post.id}}"> Comments>> </a>
   </div>
 </div>
