--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,34 @@
-<form>
-  <div class="form-group col-md-12">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top"  style="position: relative">
+  <a class="navbar-brand" href="#">Cool App</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="../list">Posts</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" target="_self">Photos </a>
+      </li>
+    </ul>
+    <button class="btn btn-outline-success my-2 my-sm-0">Icon Placeholder</button>
+  </div>
+</nav>
+
+<form class=" col-lg-4 offset-lg-4" style="top: 100px; position: relative">
+  <div class="form-group">
     <label for="email">Email</label>
     <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email" required>
   </div>
-  <div class="form-group col-md-12">
+  <div class="form-group">
     <label for="pass">Password</label>
     <input type="password" class="form-control" id="pass" placeholder="Password" required>
   </div>
-  <button target="_self" type="submit" class="btn btn-primary" routerLink="../list">Sign In</button>
+  <div class="form-group">
+    <button target="_self" type="submit" class="btn btn-primary" routerLink="../list">Sign In</button>
+  </div>
+  <div class="form-group">
+      <a target="_self" routerLink="../register"  class="navbar-brand"  routerLinkActive="active">New user? Register here</a>
+  </div>
 </form>
-  <a target="_self" routerLink="../register"  class="navbar-brand"  routerLinkActive="active">New user? Register here</a>
